--- a/index.html
+++ b/index.html
@@ -82,9 +82,10 @@
     <script type="importmap">
 {
   "imports": {
-    "react/": "https://aistudiocdn.com/react@^19.2.0/",
-    "react": "https://aistudiocdn.com/react@^19.2.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/"
+    "react": "https://esm.sh/react@19.0.0-beta-94eed63c49-20240425",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0-beta-94eed63c49-20240425/client",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "react/": "https://aistudiocdn.com/react@^19.2.0/"
   }
 }
 </script>
