--- a/index.html
+++ b/index.html
@@ -77,13 +77,10 @@
         }
       }
     </script>
-    <!-- Added Babel for JSX Transpilation -->
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <script type="importmap">
+<script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@19.0.0-beta-94eed63c49-20240425",
-    "react-dom/client": "https://esm.sh/react-dom@19.0.0-beta-94eed63c49-20240425/client",
+    "react": "https://aistudiocdn.com/react@^19.2.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react/": "https://aistudiocdn.com/react@^19.2.0/"
   }
@@ -92,8 +89,7 @@
 </head>
   <body class="bg-brand-dark">
     <div id="root"></div>
-    <!-- Load and transpile the React app -->
-    <script type="text/babel" data-type="module" src="/index.tsx"></script>
+    <script type="module" src="/index.tsx"></script>
 
     <!-- Service Worker Registration -->
     <script>
