--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
               'subtle-glow': 'subtle-glow 3s ease-in-out infinite',
               'bounce-horizontal': 'bounce-horizontal 1.5s ease-in-out infinite',
               'bounce-horizontal-reverse': 'bounce-horizontal-reverse 1.5s ease-in-out infinite',
+              'subtle-float': 'subtle-float 20s ease-in-out infinite',
             },
             keyframes: {
               'infinite-scroll': {
@@ -95,6 +96,19 @@
               'bounce-horizontal-reverse': {
                 '0%, 100%': { transform: 'translateX(0)' },
                 '50%': { transform: 'translateX(-5px)' },
+              },
+              'fly-across': {
+                '0%': { transform: 'translateX(-200px) rotate(-15deg)', opacity: '0' },
+                '10%': { opacity: '1' },
+                '90%': { opacity: '1' },
+                '100%': { transform: 'translateX(calc(100vw + 200px)) rotate(15deg)', opacity: '0' },
+              },
+              'subtle-float': {
+                '0%': { transform: 'translateY(0px) translateX(0px) rotate(0deg)' },
+                '25%': { transform: 'translateY(-15px) translateX(10px) rotate(3deg)' },
+                '50%': { transform: 'translateY(10px) translateX(-10px) rotate(-2deg)' },
+                '75%': { transform: 'translateY(-10px) translateX(15px) rotate(2deg)' },
+                '100%': { transform: 'translateY(0px) translateX(0px) rotate(0deg)' },
               },
             }
           }
