--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
               'bounce-horizontal': 'bounce-horizontal 1.5s ease-in-out infinite',
               'bounce-horizontal-reverse': 'bounce-horizontal-reverse 1.5s ease-in-out infinite',
               'subtle-float': 'subtle-float 20s ease-in-out infinite',
+              'subtle-pan': 'subtle-pan 40s ease-in-out infinite',
             },
             keyframes: {
               'infinite-scroll': {
@@ -109,6 +110,10 @@
                 '50%': { transform: 'translateY(10px) translateX(-10px) rotate(-2deg)' },
                 '75%': { transform: 'translateY(-10px) translateX(15px) rotate(2deg)' },
                 '100%': { transform: 'translateY(0px) translateX(0px) rotate(0deg)' },
+              },
+              'subtle-pan': {
+                '0%, 100%': { transform: 'translateX(-5%) translateY(-5%)' },
+                '50%': { transform: 'translateX(5%) translateY(5%)' },
               },
             }
           }
