--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 }
 </script>
 </head>
-  <body class="bg-brand-dark">
+  <body class="bg-brand-dark overflow-x-hidden">
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
 
