feat: Update brand color to gold and refresh assets
Replaces the primary green brand color with a gold hue. This change is applied across various components including the hero section, contact form, and footer links. Additionally, the apple touch icon and company logo URLs have been updated to reflect new asset locations. This visual refresh aims to align with a more premium and sophisticated aesthetic for the Beautively Inked Tattoo Studio.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="Beautively" />
-    <link rel="apple-touch-icon" href="https://i.ibb.co/d4dC0B4g/31e985d7-135f-4a54-98f9-f110bd155497-1.png" />
+    <link rel="apple-touch-icon" href="https://i.ibb.co/fVzq56Ng/31e985d7-135f-4a54-98f9-f110bd155497-2.png" />
 
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -32,7 +32,7 @@
               'brand-dark': '#0a0a0a',
               'brand-light': '#e0e0e0',
               'brand-off-white': '#f8f8f8',
-              'brand-green': '#16a34a',
+              'brand-gold': '#EAB308',
               // Old Admin Theme (Light)
               'admin-bg': '#f0f2f9',
               'admin-primary': '#5e55ef',
@@ -87,8 +87,8 @@
                 'to': { 'stroke-dashoffset': '0' },
               },
               'subtle-glow': {
-                '0%, 100%': { filter: 'drop-shadow(0 0 8px rgba(22, 163, 74, 0.4)) drop-shadow(0 0 4px rgba(224, 224, 224, 0.2))' },
-                '50%': { filter: 'drop-shadow(0 0 16px rgba(22, 163, 74, 0.6)) drop-shadow(0 0 8px rgba(224, 224, 224, 0.3))' },
+                '0%, 100%': { filter: 'drop-shadow(0 0 8px rgba(234, 179, 8, 0.4)) drop-shadow(0 0 4px rgba(224, 224, 224, 0.2))' },
+                '50%': { filter: 'drop-shadow(0 0 16px rgba(234, 179, 8, 0.6)) drop-shadow(0 0 8px rgba(224, 224, 224, 0.3))' },
               },
               'bounce-horizontal': {
                 '0%, 100%': { transform: 'translateX(0)' },
@@ -115,6 +115,10 @@
                 '0%, 100%': { transform: 'translateX(-5%) translateY(-5%)' },
                 '50%': { transform: 'translateX(5%) translateY(5%)' },
               },
+            },
+            gridTemplateColumns: {
+              '15': 'repeat(15, minmax(0, 1fr))',
+              '20': 'repeat(20, minmax(0, 1fr))',
             }
           }
         }
