--- a/index.html
+++ b/index.html
@@ -155,6 +155,106 @@
 </head>
   <body class="bg-brand-dark overflow-x-hidden">
     <div id="root"></div>
+    <template id="latest-designs-template">
+      <style>
+        .widget-container {
+          display: flex;
+          flex-direction: column;
+          font-family: 'Montserrat', sans-serif;
+          background-color: #0a0a0a;
+          color: #e0e0e0;
+          padding: 16px;
+          border-radius: 12px;
+          height: 100%;
+          box-sizing: border-box;
+          border: 1px solid rgba(255, 255, 255, 0.1);
+        }
+        .widget-header {
+          font-family: 'Dancing Script', cursive;
+          font-size: 24px;
+          margin: 0 0 12px;
+          color: #EAB308;
+        }
+        .design-list {
+          flex-grow: 1;
+          overflow-y: auto;
+          list-style: none;
+          padding: 0;
+          margin: 0;
+          display: flex;
+          flex-direction: column;
+          gap: 12px;
+        }
+        /* Simple scrollbar for dark themes */
+        .design-list::-webkit-scrollbar {
+            width: 5px;
+        }
+        .design-list::-webkit-scrollbar-track {
+            background: transparent;
+        }
+        .design-list::-webkit-scrollbar-thumb {
+            background: #555;
+            border-radius: 10px;
+        }
+        .design-list::-webkit-scrollbar-thumb:hover {
+            background: #777;
+        }
+        .design-item {
+          display: flex;
+          gap: 12px;
+          align-items: center;
+          background-color: rgba(255, 255, 255, 0.05);
+          padding: 8px;
+          border-radius: 8px;
+          text-decoration: none;
+          color: inherit;
+          transition: background-color 0.2s ease-in-out;
+        }
+        .design-item:hover {
+            background-color: rgba(255, 255, 255, 0.1);
+        }
+        .design-image {
+          width: 50px;
+          height: 50px;
+          object-fit: cover;
+          border-radius: 6px;
+          flex-shrink: 0;
+        }
+        .design-info {
+            overflow: hidden;
+        }
+        .design-info h4 {
+          font-size: 14px;
+          font-weight: bold;
+          margin: 0 0 4px;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          color: #f8f8f8;
+        }
+        .design-info p {
+          font-size: 12px;
+          color: #9ca3af;
+          margin: 0;
+        }
+      </style>
+      <div class="widget-container">
+        <h3 class="widget-header">Latest Designs</h3>
+        <ul class="design-list" ms-data-src="designs">
+          <template>
+            <li>
+              <a href="{{url}}" class="design-item" target="_blank">
+                <img class="design-image" src="{{imageUrl}}" alt="{{title}}">
+                <div class="design-info">
+                  <h4>{{title}}</h4>
+                  <p>{{description}}</p>
+                </div>
+              </a>
+            </li>
+          </template>
+        </ul>
+      </div>
+    </template>
     <script type="module" src="/index.tsx"></script>
   </body>
 </html>
